# AIEngine2D

./: .clang-format  .gitignore  CMakeLists.txt  README.md  claude.md  todo.md
docs/: claude.md
docs/blog_posts/: 00-project-introduction.html  01-engine-setup.html  02-game-loop.html
examples/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/animation/: placeholder.cpp
src/assets/: claude.md  placeholder.cpp
src/audio/: claude.md  placeholder.cpp
src/core/: claude.md  config.h.in  logger.h  placeholder.cpp
src/editor/: claude.md  placeholder.cpp
src/input/: claude.md  placeholder.cpp
src/physics/: claude.md  placeholder.cpp
src/renderer/: claude.md  placeholder.cpp
tests/: CMakeLists.txt
