# =============================================================================
# AIEngine2D - Examples CMakeLists.txt
# =============================================================================

# Examples will be added as the engine develops
# For now, this is a placeholder

message(STATUS "Examples directory configured (no examples yet)")

# Example of how examples will be structured:
# add_subdirectory(pong)
# add_subdirectory(platformer)
# add_subdirectory(space_shooter)
