# =============================================================================
# AIEngine2D - Tests CMakeLists.txt
# =============================================================================

# Tests will be added as the engine develops
# For now, this is a placeholder

message(STATUS "Tests directory configured (no tests yet)")

# Example of how tests will be structured:
# add_executable(math_tests math_tests.cpp)
# target_link_libraries(math_tests AIEngine2D)
# add_test(NAME MathTests COMMAND math_tests)
